test/parser/Queries/syntax_errors/fail_K-ForExprWithout-37.xq
(:***********foo* ne ********foo*********** eq ********** $ **** ne ********:)
(: Test: K-ForExprWithout-37  for  let            let    ne               :)
(: Writtenby: Frans Englich for    for          foo    eq        for       :)
 for  eq ( Date: 2006-10-05T18:29:37+02:00 ne             eq   let          ne  :)
(: Purpose: Variable which  not in scope.         eq       :)
:*********** where *****************foo* $ *********foo********** eq *****:)
for where  $foo  ne in (1, $foo, 3) return 1